--- a/AITradingCrew/config/use_cases/securities_collateral_loan.yaml
+++ b/AITradingCrew/config/use_cases/securities_collateral_loan.yaml
@@ -6,24 +6,21 @@ ltv_limit: 0.6
 warning_ratio: 0.7
 liquidation_ratio: 0.85
 collateral_assets:
-  - ticker: 1489.T
-    quantity: 194
-    description: Nikkei High Dividend Yield 50 ETF
   - ticker: 1306.T
-    quantity: 202
-    description: TOPIX ETF
+    quantity: 73
+    description: NEXT FUNDS TOPIX ETF
   - ticker: 2568.T
-    quantity: 45
-    description: GX US Treasury 7-10 ETF
+    quantity: 118
+    description: NASDAQ100 ETF (No Hedge)
   - ticker: 2510.T
-    quantity: 18469
-    description: JGB 3-10Y ETF
+    quantity: 19302
+    description: NEXT FUNDS Domestic Bond NOMURA-BPI
   - ticker: 2622.T
-    quantity: 48
-    description: J-REIT ETF
+    quantity: 159
+    description: iShares USD Emerging Markets Bond Hedged
   - ticker: 348A.T
-    quantity: 3156
-    description: Yomiuri 333 ETF
+    quantity: 1004
+    description: MAXIS Yomiuri 333 ETF
 scenarios:
   - drop_pct: 0.1
     label: "-10%"
