refactor: Improve securities collateral loan use case and backtesting
This commit includes several improvements to the securities collateral loan use case:
- Refactored the code for better readability and maintainability.
- Updated the backtesting script and results.
- Adjusted the configuration for the use case.

--- a/AITradingCrew/config/use_cases/securities_collateral_loan.yaml
+++ b/AITradingCrew/config/use_cases/securities_collateral_loan.yaml
@@ -44,6 +44,8 @@ optimization:
     max_weight: 0.35
     max_category_weight: 0.5
     max_volatility: 0.12
+    max_asset_volatility: 0.25
+    max_asset_drawdown: 0.3
   sample_size: 20000
   lookback: 3y
   profiles:
