chore: Ignore nohup.out

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ yahooquery/.git/
 
 # AITradingCrew
 AITradingCrew/resources/
-AITradingCrew/config/
+nohup.outAITradingCrew/config/
 
 # freqtrade
 freqtrade/user_data/
