--- a/AITradingCrew/config/use_cases/securities_collateral_loan.yaml
+++ b/AITradingCrew/config/use_cases/securities_collateral_loan.yaml
@@ -44,8 +44,12 @@ optimization:
     max_weight: 0.35
     max_category_weight: 0.5
     max_volatility: 0.15
-    max_asset_volatility: 0.35
-    max_asset_drawdown: 0.35
+    max_asset_drawdown: 0.45
+  risk_policy:
+    primary_metric: max_asset_drawdown
+    description: >
+      Exclude ETFs solely when their trailing max drawdown exceeds the max_asset_drawdown
+      constraint; other limits remain for portfolio construction, not asset gating.
   sample_size: 20000
   lookback: 5y
   history_window: 10y
@@ -55,7 +59,7 @@ optimization:
       objective_weights:
         sharpe: 1.0
         volatility: 0.0
-      correlation_threshold: 0.92
+      correlation_threshold: 0.9
       max_portfolio_size: 14
       min_assets: 6
     - name: low_volatility
