feat: Add README.md files with function, command, and summary
This commit introduces README.md files to various directories within the AITradingCrew project.
These READMEs provide clear descriptions of the directory's purpose, relevant functions, execution commands (where applicable), and a concise summary.

The following directories have been updated with README.md files:
- ai_trading_crew/backtests/
- output/backtests/
- output/backtests/securities_collateral_loan/
- All date-specific subdirectories under output/backtests/securities_collateral_loan/

--- a/AITradingCrew/config/use_cases/securities_collateral_loan.yaml
+++ b/AITradingCrew/config/use_cases/securities_collateral_loan.yaml
@@ -56,10 +56,11 @@ optimization:
       equity:
         min: 0.40
         max: 0.60
-    core_satellite:
-      core_weight: 0.60
-      satellite_weight: 0.40
-      core_rebalance_years: 2
+  core_satellite:
+    enabled: true
+    core_weight: 0.60
+    satellite_weight: 0.40
+    core_rebalance_years: 2
   risk_policy:
     primary_metric: max_asset_drawdown
     description: >
