feat: Add comprehensive visualizations to Index 7-Portfolio report
This commit enhances the Index 7-Portfolio use case by adding a suite of visualizations to the final report. These charts provide a deeper understanding of the portfolio's allocation, performance, risk, and asset correlations.

Key changes include:
- **reporting.py**: Integrated visualization generation into the reporting process.
- **visualization.py**: Implemented 8 distinct charts, including:
    - Portfolio Allocation
    - Cumulative Returns Comparison
    - Drawdown Evolution
    - LTV Stress Tests
    - Asset Contribution to Returns
    - Risk-Return Profile
    - Rolling Sharpe Ratio
    - Asset Correlation Matrix
- **use_case.py**: Updated to support the new visualization workflow.
- **pyproject.toml**: Added  for advanced plotting.
- **index_7_portfolio_report.md**: Updated to include the newly generated visualizations.

--- a/AITradingCrew/pyproject.toml
+++ b/AITradingCrew/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "crawl4ai>=0.6.3",
     "openpyxl>=3.0.0",
     "requests>=2.31.0",
+    "seaborn>=0.13.2",
 ]
 
 [project.scripts]
