feat(imura): enhance analysis with full history and comparisons
- Fix data fetching to handle Yahoo Finance pagination (Playwright)
- Retrieve Imura Fund data from inception (2025-01-27)
- Add TOPIX (1306.T) and S&P 500 (1655.T) comparisons
- Add log-scale performance chart to reporting
- Update executive summary and documentation

--- a/config/use_cases/imura.yaml
+++ b/config/use_cases/imura.yaml
@@ -1,7 +1,5 @@
 days: 365
 targets:
-  Fundnote_Kaihou: "BK311251"
-  Nikkei225_Proxy: "998407.O"
-  JPX400_ETF: "1591.T"
-  TSE_Growth250_ETF: "2516.T"
-  NASDAQ100_ETF: "1545.T"
+  Imura Fund: "BK311251"
+  TOPIX ETF: "1306.T"
+  S&P 500 ETF: "1655.T"
