feat: integrate Amazon Chronos-2 dependencies and research script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ dependencies = [
     "huggingface_hub",
     "safetensors",
     "pyarrow",
+    "chronos-forecasting",
+    "transformers",
+    "accelerate",
 ]
 
 [project.scripts]
